# eidolon

./: .gitignore  Application.hs  Foundation.hs  Helper.hs  Import.hs  LICENSE.md  Makefile  Model.hs  README.md  Scale.hs  Settings.hs  bower.json  devel.hs  eidolon.cabal  stack.yaml
Handler/: About.hs  Activate.hs  Admin.hs  AdminAlbumSettings.hs  AdminComments.hs  AdminMediumSettings.hs  AdminProfileSettings.hs  Album.hs  AlbumSettings.hs  Commons.hs  Home.hs  Login.hs  Medium.hs  MediumSettings.hs  NewAlbum.hs  Profile.hs  ProfileDelete.hs  ProfileSettings.hs  Reactivate.hs  RootFeed.hs  Search.hs  Signup.hs  Tag.hs  Upload.hs
Migrations/0.0.3-0.0.4/: Migration.hs
Migrations/0.0.4-0.0.5/: Migration.hs
Migrations/0.0.7-0.1.0.0/: Migration.hs
Migrations/0.1.0.0-0.1.1.0/: Migration.hs
Migrations/0.1.3.3-0.1.4.0/: Migration.hs
Migrations/0.1.4.0-0.1.5.0/: Migration.hs
Settings/: Development.hs  StaticFiles.hs
app/: DevelMain.hs  devel.hs  main.hs
config/: keter.yaml  models  routes  settings.yml  sqlite.yml
deploy/: Procfile
src/: Activate.purs  Common.js  Common.purs  Login.purs  Main.js  Main.purs
static/css/: dropdown.css  main.css  style-desktop.css  style-global.css
static/js/: activate.js  init.js  jsSHA.js  login.js  signup.js  skel.min.js
templates/: about.hamlet  activate.hamlet  adminAlbumMedia.hamlet  adminAlbumSet.hamlet  adminAlbums.hamlet  adminBase.hamlet  adminComments.cassius  adminComments.hamlet  adminMedia.hamlet  adminMediumSet.cassius  adminMediumSet.hamlet  adminProfileSettings.hamlet  adminProfiles.hamlet  adminUserAlbums.hamlet  adminUserMedia.hamlet  album.cassius  album.hamlet  albumDelete.hamlet  albumSettings.hamlet  bulkUpload.hamlet  commentDelete.hamlet  commentReply.hamlet  copyrightFooter.hamlet  dUpload.hamlet  default-layout-wrapper.cassius  default-layout-wrapper.hamlet  default-layout.cassius  default-layout.hamlet  default-widget.hamlet  form-widget.cassius  home.hamlet  login.hamlet  medium.cassius  medium.hamlet  medium.julius  mediumDelete.hamlet  mediumMove.hamlet  mediumSettings.hamlet  newAlbum.hamlet  page.hamlet  (+12 more)
