name:              eidolon
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Helper
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Home
                     Handler.Signup
                     Handler.Login
                     Handler.Activate
                     Handler.Profile
                     Handler.Upload
                     Handler.NewAlbum
                     Handler.Album
                     Handler.Medium
                     Handler.AlbumSettings
                     Handler.MediumSettings
                     Handler.Reactivate
                     Handler.ProfileSettings
                     Handler.ProfileDelete
                     Handler.Admin
                     Handler.AdminProfileSettings
                     Handler.AdminAlbumSettings
                     Handler.AdminMediumSettings
                     Handler.AdminComments
                     Handler.Tag
                     Handler.RootFeed
                     Handler.Commons

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                RecordWildCards
                ViewPatterns

    build-depends: base                          >= 4
                 , yesod                         >= 1.4.0
                 , yesod-core                    >= 1.2.12
                 , yesod-auth                    >= 1.3
                 , yesod-static                  >= 1.2
                 , yesod-form                    >= 1.3
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , persistent                    >= 2.1.1.3
                 , persistent-sqlite             >= 1.3
                 , persistent-template           >= 1.3
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control                 >= 0.3
                 , wai-extra                     >= 3.0
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0
                 , data-default
                 , aeson                         >= 0.6
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.1.4
                 , wai-logger                    >= 2.1
                 -- transition to persisten 2.0
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , file-embed
                 -- custom dependencies
                 , random
                 , mime-mail
                 , blaze-html
                 , filepath
                 , system-filepath
                 , time
                 , yesod-persistent
                 , transformers
                 , old-locale
                 , cereal
                 , cryptohash-cryptoapi
                 , crypto-api
                 , imagemagick
                 , resourcet
                 , yesod-markdown                >= 0.8
                 , blaze-builder
                 , blaze-markup
                 , either

executable         eidolon
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , eidolon
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , eidolon
                 , yesod-test >= 1.2
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
